sqlxo/tests/orm/derive/try/err/wrong_form.stderr
error: expected #[sqlxo(table_name = "...")]
 --> tests/orm/derive/try/err/wrong_form.rs:5:1
  |
5 | #[sqlxo = "oops"]
  | ^^^^^^^^^^^^^^^^^
